prof fav alignment corrected

--- a/style.css
+++ b/style.css
@@ -3997,7 +3997,6 @@ html[data-theme="mgl"] .theme-bg .bg-new-stripe{
 
 .user_data {
     flex: 1.1;               
-
 }
 
 .profile_right {
@@ -4018,14 +4017,14 @@ html[data-theme="mgl"] .theme-bg .bg-new-stripe{
 
 .profile_favourites {
     flex: 1;
-    margin: 20px;
+    margin: 10px;
 }
 
 .profile_favourites_items {
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
-    justify-content: flex-start;
+    justify-content: Center;
     margin-top: 15px;
     margin-bottom: 50px;
 }
